media/css/new/forum_main.css
.titlebar h2 {
    margin-left: 4px;
    margin-top: 7px;
    width: 380px;
    float: left;
}
.titlebar h2 a {
    color: #999999;
    text-decoration: none;
}
.category .latest_container {
    float: left;
    width: 395px;
    overflow: hidden;
}
.category .rightborder {
    border-right: 1px #F2F2F2 solid;
    margin-right: 4px;
}
.latest_container {
    font-size: 11px;
    color: #666666;
    overflow: hidden;
}
.latest_container .post {
    border-bottom: 1px #F2F2F2 solid;
    overflow: hidden;
    margin-right: 4px;
}
.latest_container .post .post { border: none; }
.latest_container .post a {
    color: #666666;
    text-decoration: none;
}
.post a.profile_link {
    font-weight: bold;
}
.post .topic {
    margin-top: 12px;
}
.post .topic, .post .post {
    margin-left: 10px;
    line-height: 15px;
}
.post .forum, .post .date {
    margin-top: 10px;
}
.post .forum { margin-left: 10px; }
.post .forum a { color: #999999; }
.post .date a { color: #C9C9C9; }
.post .date {
    float: right;
    margin-right: 4px;
}
.post .topic {
    height: 15px;
    overflow: hidden;
}

